--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -48,10 +48,9 @@ body{
     height: calc(100vh - 70px);
     overflow-y: hidden;
     overflow-x: auto;
-    position: absolute;
+    position: relative;
     top: 50px;
-    min-width: 100%;
-    z-index: -1;
+    width: fit-content;
 }
 
 .tooltip{
